# legs

./: .gitignore  README.md
acc_gyro/src/acc_gyro_publisher/: package.xml
acc_gyro/src/acc_gyro_publisher/MPU6050-Pi-Demo/: demo_raw
acc_gyro/src/acc_gyro_publisher/src/: main.cpp
raspberry_pi_3/raspi_opencv/: main.cpp
raspi_opencv/: CMakeLists.txt
simulation/: CMakeLists.txt  Helpers.hh  IActuator.cc  IActuator.hh  ITendon.cc  ITendon.hh  MusclePlugin.cc  MusclePlugin.hh
src/acc_gyro_publisher/: CMakeLists.txt
src/acc_gyro_publisher/MPU6050-Pi-Demo/: demo_3d  demo_dmp
